# rp2040-freertos

./: CMakeLists.txt  README.org
cmake/: README.org  mcu_command_targets.cmake
config/: FreeRTOSConfig.h
src/: CMakeLists.txt  main.cpp  temp_reader.hpp
src/include/co_pwm/: pwm.hpp
src/include/co_uart/: parser_task.cpp  parser_task.hpp  uart_main.cpp
src/include/co_util/: utils.hpp
tools/gdb/: gdbgui.gdb
tools/openocd/: gdbgui.sh  run_debug.sh  run_openocd.sh
